--- a/en/page1en.html
+++ b/en/page1en.html
@@ -34,9 +34,7 @@
           <h2>The Magical Saga That Enchanted the World</h2>
           <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
           <p>
-            Here we will explore the article 'Harry Potter: The Magical Saga That Enchanted the World.' It offers us an immersive exploration of the captivating world of Harry Potter. Since its first publication in 1997, this literary saga has charmed a diverse audience with its unique blend of magic and adventure.
-            At the heart of the story is Hogwarts, the school of witchcraft and wizardry that has become a home for the main characters while inspiring generations of fans.
-            However, Harry Potter goes beyond the pages of books and the images on the big screen. The magic extends into the real world through theme parks, video games, merchandise, and a devoted fan community.
+            Explore the enchanting universe of Harry Potter, a literary saga that has charmed a broad audience since its release in 1997. Hogwarts, the wizarding school at the heart of the story, has become an iconic place, inspiring generations of fans. Beyond books and films, this magical universe extends into theme parks, video games, merchandise, and a community of passionate fans.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -45,10 +43,7 @@
           <h2>The Magical Beginning of an Epic Saga</h2>
           <a href=""><img src="/public/img/HarryP1.webp"></a>
           <p>
-            Dive into the enchanting magic that has charmed the entire world. The article 'Harry Potter at the School of Sorcery: The Magical Beginning of an Epic Saga' takes you to the start of Harry Potter's extraordinary adventure.
-            Discover how this first book captured the imagination of millions of readers and opened the doors to an enchanting universe. Follow Harry from his encounter with the Dursleys to the arrival of the magical letter that changed everything,
-            inviting him to Hogwarts, the school of witchcraft. Explore the wonders and mysteries of Hogwarts alongside Harry, Ron, and Hermione, and immerse yourself in the captivating story of the battle against the evil wizard, Lord Voldemort.
-            This adventure begins here, on this page, where magic and wonder await you.
+            Discover the enchanting magic of 'Harry Potter and the Sorcerer's Stone: The Magical Beginning of an Epic Saga.' This article immerses you in the extraordinary adventure of Harry Potter, captivating millions of readers. Follow Harry from his encounter with the Dursleys to the arrival of the life-changing magical letter, inviting him to Hogwarts School of Witchcraft and Wizardry. Explore the wonders of Hogwarts with Harry, Ron, and Hermione, and delve into the battle against Lord Voldemort. This magical adventure begins here, where wonder awaits you.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -57,9 +52,8 @@
           <h2>The Epic Conclusion of a Magical Saga</h2>
           <a href=""><img src="/public/img/Harry_gare.webp"></a>
           <p>
-            Harry Potter and the Deathly Hallows: The Epic Conclusion of a Magical Saga" is a deep dive into the final chapter of the legendary adventure of Harry, Ron, and Hermione. Discover how this epic conclusion answers lingering questions, explores the darkest moments of the saga, and celebrates the triumph of courage over evil. This emotional cinematic adventure is a prelude to an epic conclusion that will deeply resonate with all fans.
-            Immerse yourself once again in the magical world of Harry Potter, relive the unforgettable moments that marked the end of this legendary series, and discover how magic continues to thrive, where friendship is precious,
-            and where adventure knows no end. It's an invitation to revisit a saga that has captivated generations of readers and moviegoers.
+            Harry Potter and the Deathly Hallows: The Epic Conclusion" delves into the final chapter of the legendary adventure of Harry, Ron, and Hermione. This conclusion addresses lingering questions, explores the darkest moments, and celebrates the triumph of courage over evil. This emotionally charged cinematic adventure leads to a touching conclusion for all fans.
+            Step back into the magical world of Harry Potter, relive the pivotal moments of the end of this legendary series, and discover how magic endures, carried by friendship. This invitation to revisit a captivating saga for readers and film enthusiasts spans generations.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -68,10 +62,7 @@
           <h2>The Enchanting Melody of the Harry Potter Saga</h2>
           <a href=""><img src="/public/img/Hedwige.webp"></a>
           <p>
-            We will explore the profound meaning of the iconic melody composed by John Williams for the Harry Potter saga. This melody, named Hedwig's Theme in honor of Harry's owl, is much more than just a film score.
-            The article describes how this melody, played by a symphony orchestra, evokes a sense of enchantment, mystery, and adventure, instantly transporting listeners into the fantastical world of Hogwarts. The melody is present from the first to the last film in the series, creating emotional continuity for fans.
-            Beyond magic, "Hedwig's Theme" embodies a range of emotions, reminding listeners that the magic of Harry Potter resides in friendship, courage, and the power of love. Every note of "Hedwig's Theme" reminds us that magic is everywhere,
-            if we know where to look.
+            The article explores the profound meaning of "Hedwig's Theme," the iconic melody of the Harry Potter saga composed by John Williams. This music transcends a mere film soundtrack, evoking enchantment, mystery, and adventure through a symphonic orchestra. Present from the first to the last film, it creates an emotional continuity for fans. This melody embodies various emotions and reminds us that the magic of Harry Potter resides in values such as friendship, courage, and the power of love. Every note of "Hedwig's Theme" serves as a reminder that magic is everywhere for those who know where to look.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -80,10 +71,7 @@
           <h2>The Wizards Behind the Screen</h2>
           <a href=""><img src="/public/img/Chaise.webp"></a>
           <p>
-            Finally, discover the Wizards Behind the Screen: The Directors Who Masterfully Brought Harry Potter to Life. The Harry Potter films are famous for capturing the magic of Hogwarts and the essence of J.K. Rowling's beloved characters.
-            However, behind each film is a talented director who infused a unique artistic vision into this magical epic. In this article, we will delve into the world of the directors who contributed to making Harry Potter a cinematic reality.
-            The legacy of Harry Potter continues to shine on the big screen, and each film is evidence of the timeless magic of Hogwarts. Dive into this cinematic adventure and explore the talent that breathed life into this unforgettable saga. The magic endures,
-            and the quest of Harry, Ron, and Hermione remains eternal.
+            Discover the Directors of Harry Potter: those who skillfully brought the magic of Hogwarts to the screen. Each film in the series, renowned for capturing the essence of J.K. Rowling's characters, has been shaped by a director bringing their unique artistic vision. This article explores their contribution to this cinematic epic that upholds Harry Potter's magical legacy. Dive into this cinematic journey to explore the talent behind this unforgettable saga, where magic persists and the quest of Harry, Ron, and Hermione remains eternal.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
