--- a/fr/page1.html
+++ b/fr/page1.html
@@ -34,13 +34,7 @@
           <h1>Introduction aux articles</h1>
           <h2>La Saga Magique Qui a Enchanté le Monde</h2>
           <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
-          <p>Ici, une exploration immersive de l'univers captivant de Harry Potter.
-            Depuis sa première publication en 1997,
-            cette saga littéraire a séduit un public diversifié grâce à son mélange unique de magie et d'aventure.
-            Au cœur de l'histoire se trouve Poudlard, l'école de sorcellerie qui est devenue un chez-soi pour les personnages principaux,
-            tout en inspirant des générations de fans.
-            Cependant, Harry Potter va au-delà des pages des livres et des images sur grand écran.
-            La magie s'étend dans le monde réel à travers des parcs à thème, des jeux vidéo, des produits dérivés et une communauté de fans dévoués.
+          <p>Explorez l'univers envoûtant de Harry Potter, une saga littéraire qui a charmé un large public depuis sa parution en 1997. Poudlard, l'école de sorcellerie au cœur de l'histoire, est devenue un lieu emblématique, inspirant des générations de fans. Au-delà des livres et des films, cet univers magique se déploie dans des parcs à thème, jeux vidéo, produits dérivés, et une communauté de fans passionnés.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -48,12 +42,7 @@
         <div class="article2">
           <h2>Le Début Magique d'une Saga Épique</h2>
           <a href=""><img src="/public/img/HarryP1.webp"></a>
-          <p>Plongez ensuite dans la magie envoûtante qui a enchanté le monde entier.
-            L'article "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique" vous transporte au commencement de l'aventure extraordinaire de Harry Potter.
-            Découvrez comment ce premier livre a capturé l'imagination de millions de lecteurs et a ouvert les portes d'un univers ensorcelant.
-            Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de cette lettre magique qui a tout changé, l'invitant à Poudlard,
-            l'école de sorcellerie. Explorez les merveilles et les mystères de Poudlard aux côtés de Harry, Ron et Hermione, et plongez-vous dans l'histoire captivante de la lutte contre le sorcier maléfique, Lord Voldemort.
-            Cette aventure commence ici, sur cette page, où la magie et l'émerveillement vous attendent.
+          <p>Découvrez la magie envoûtante de "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique". Cet article vous plonge dans l'aventure extraordinaire de Harry Potter, captivant des millions de lecteurs. Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de la lettre magique qui change tout, l'invitant à Poudlard, l'école de sorcellerie. Explorez avec Harry, Ron et Hermione les merveilles de Poudlard et plongez dans la lutte contre Lord Voldemort. Cette aventure magique commence ici, où l'émerveillement vous attend.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -62,11 +51,8 @@
           <h2>La Conclusion Épique d'une Saga Magique</h2>
           <a href=""><img src="/public/img/Harry_gare.webp"></a>
           <p>
-            "Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique" est une plongée profonde dans le dernier chapitre de l'aventure légendaire de Harry,
-            Ron et Hermione. Découvrez comment cette conclusion épique répond aux questions en suspens, explore les moments les plus sombres de la saga et célèbre le triomphe du courage sur le mal.
-            Cette aventure cinématographique émotionnelle est le prélude à une conclusion épique qui touchera tous les fans en profondeur.
-            Replongez dans l'univers magique de Harry Potter, revivez les moments inoubliables qui ont marqué la fin de cette série légendaire et découvrez comment la magie continue de vivre,
-            où l'amitié est précieuse et où l'aventure n'a pas de fin. C'est une invitation à revisiter une saga qui a captivé des générations de lecteurs et de cinéphiles.
+            "Harry Potter et les Reliques de la Mort : La Conclusion Épique" plonge dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. Cette conclusion répond aux questions en suspens, explore les moments les plus sombres et célèbre le triomphe du courage sur le mal. Cette aventure cinématographique émotionnelle précède une conclusion touchante pour tous les fans.
+            Retournez dans l'univers magique de Harry Potter, revivez les moments marquants de la fin de cette série légendaire et découvrez comment la magie perdure, portée par l'amitié. Cette invitation à revisiter une saga captivante pour les lecteurs et les cinéphiles traverse les générations.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -75,9 +61,7 @@
           <h2>La Mélodie Enchantée de la Saga Harry Potter</h2>
           <a href=""><img src="/public/img/Hedwige.webp"></a>
           <p>
-            Nous verrons la signification profonde de la mélodie emblématique composée par John Williams pour la saga Harry Potter. Cette mélodie, baptisée Hedwig's Theme en l'honneur de la chouette d'Harry, est bien plus qu'une simple musique de film.
-            L'article décrit comment cette mélodie, jouée par un orchestre symphonique, évoque un sentiment d'enchantement, de mystère et d'aventure, transportant instantanément les auditeurs dans l'univers fantastique de Poudlard. La mélodie est présente du premier au dernier film de la série, créant une continuité émotionnelle pour les fans.
-            Au-delà de la magie, "Hedwig's Theme" incarne une gamme d'émotions, rappelant aux auditeurs que la magie de Harry Potter réside dans l'amitié, le courage, et le pouvoir de l'amour.Chaque note de "Hedwig's Theme" nous rappelle que la magie est partout, si l'on sait où chercher.
+            L'article explore la signification profonde de "Hedwig's Theme", la mélodie emblématique de la saga Harry Potter composée par John Williams. Cette musique va au-delà d'une simple bande originale de film, évoquant enchantement, mystère et aventure grâce à un orchestre symphonique. Présente du premier au dernier film, elle crée une continuité émotionnelle pour les fans. Cette mélodie incarne diverses émotions et rappelle que la magie de Harry Potter réside dans des valeurs telles que l'amitié, le courage et le pouvoir de l'amour. Chaque note de "Hedwig's Theme" rappelle que la magie est partout pour ceux qui savent où la chercher.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
@@ -86,9 +70,7 @@
           <h2>Les Mage Derrière la Réalisation de Harry Potter</h2>
           <a href=""><img src="/public/img/Chaise.webp"></a>
           <p>
-            Finalement découvrez les Mages Derrière l'Écran : Les Réalisateurs Qui Ont Magistralement Porté Harry Potter à la Vie
-            Les films Harry Potter sont célèbres pour avoir capturé la magie de Poudlard et l'essence des personnages bien-aimés de J.K. Rowling. Cependant, derrière chaque film se trouve un réalisateur talentueux qui a insufflé une vision artistique unique dans cette épopée magique. Dans cet article, nous plongerons dans le monde des réalisateurs qui ont contribué à faire de Harry Potter une réalité cinématographique.
-            L'héritage de Harry Potter continue de briller sur grand écran, et chaque film est une preuve de la magie intemporelle de Poudlard. Plongez dans cette aventure cinématographique et explorez le talent qui a donné vie à cette saga inoubliable. La magie continue, et la quête de Harry, Ron et Hermione reste éternelle.
+            Découvrez les Réalisateurs de Harry Potter : ceux qui ont porté avec talent la magie de Poudlard à l'écran. Chaque film de la série, célèbre pour capturer l'essence des personnages de J.K. Rowling, a été façonné par un réalisateur apportant sa vision artistique unique. Cet article explore leur contribution à cette épopée cinématographique qui maintient l'héritage magique de Harry Potter. Plongez dans cette aventure cinématographique pour explorer le talent derrière cette saga inoubliable, où la magie demeure et la quête de Harry, Ron et Hermione demeure éternelle.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
           <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
