--- a/fr/page1.html
+++ b/fr/page1.html
@@ -15,25 +15,26 @@
     </header>
     <main>
       <section class="landing">
-        <img src="/public/img/Head.webp" alt="accueuil">
+        <img class="head" src="/public/img/Head.webp" alt="accueuil">
         <div>
           <p>FR / ENG</p>
           <h1>Dobby est libre</h1>
         </div>
-        <p>
+        <p class="intro">
           Bienvenue dans le monde magique de notre site dédié à Harry Potter !
           Plongez dans l'univers ensorcelant de la saga qui a captivé des millions de fans à travers le monde.
           Découvrez des articles fascinants, des analyses approfondies, des anecdotes inédites et un espace chaleureux pour les passionnés.
           Rejoignez-nous dans cette aventure où la magie est réelle, l'amitié est précieuse, et l'aventure n'a pas de fin. Que vous soyez un sorcier chevronné ou un Moldu curieux,
           il y a toujours quelque chose de magique à explorer ici. Venez, laissez-vous envoûter et faites partie de cette communauté qui célèbre l'univers inoubliable d'Harry Potter
         </p>
-        <img src="/public/img/illu_harry.webp" alt="illustration">
+        <img class="illustration" src="/public/img/illu_harry.webp" alt="illustration">
       </section>
       <section class="articles">
-        <div class="article1">
           <h1>Introduction aux articles</h1>
+          <div class="article1">
           <h2>La Saga Magique Qui a Enchanté le Monde</h2>
           <a href=""><img src="/public/img/HarryP1 banner.webp"></a>
+          <p class="rectangle1"></p>
           <p>Explorez l'univers envoûtant de Harry Potter, une saga littéraire qui a charmé un large public depuis sa parution en 1997. Poudlard, l'école de sorcellerie au cœur de l'histoire, est devenue un lieu emblématique, inspirant des générations de fans. Au-delà des livres et des films, cet univers magique se déploie dans des parcs à thème, jeux vidéo, produits dérivés, et une communauté de fans passionnés.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
@@ -42,6 +43,7 @@
         <div class="article2">
           <h2>Le Début Magique d'une Saga Épique</h2>
           <a href=""><img src="/public/img/HarryP1.webp"></a>
+          <p class="rectangle2"></p>
           <p>Découvrez la magie envoûtante de "Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique". Cet article vous plonge dans l'aventure extraordinaire de Harry Potter, captivant des millions de lecteurs. Suivez Harry depuis sa rencontre avec les Dursley jusqu'à l'arrivée de la lettre magique qui change tout, l'invitant à Poudlard, l'école de sorcellerie. Explorez avec Harry, Ron et Hermione les merveilles de Poudlard et plongez dans la lutte contre Lord Voldemort. Cette aventure magique commence ici, où l'émerveillement vous attend.
           </p>
           <a href=""><img src="/public/img/partager" alt="partager"></a>
@@ -50,6 +52,7 @@
         <div class="article3">
           <h2>La Conclusion Épique d'une Saga Magique</h2>
           <a href=""><img src="/public/img/Harry_gare.webp"></a>
+          <p class="rectangle3"></p>
           <p>
             "Harry Potter et les Reliques de la Mort : La Conclusion Épique" plonge dans le dernier chapitre de l'aventure légendaire de Harry, Ron et Hermione. Cette conclusion répond aux questions en suspens, explore les moments les plus sombres et célèbre le triomphe du courage sur le mal. Cette aventure cinématographique émotionnelle précède une conclusion touchante pour tous les fans.
             Retournez dans l'univers magique de Harry Potter, revivez les moments marquants de la fin de cette série légendaire et découvrez comment la magie perdure, portée par l'amitié. Cette invitation à revisiter une saga captivante pour les lecteurs et les cinéphiles traverse les générations.
@@ -60,6 +63,7 @@
         <div class="article4">
           <h2>La Mélodie Enchantée de la Saga Harry Potter</h2>
           <a href=""><img src="/public/img/Hedwige.webp"></a>
+          <p class="rectangle4"></p>
           <p>
             L'article explore la signification profonde de "Hedwig's Theme", la mélodie emblématique de la saga Harry Potter composée par John Williams. Cette musique va au-delà d'une simple bande originale de film, évoquant enchantement, mystère et aventure grâce à un orchestre symphonique. Présente du premier au dernier film, elle crée une continuité émotionnelle pour les fans. Cette mélodie incarne diverses émotions et rappelle que la magie de Harry Potter réside dans des valeurs telles que l'amitié, le courage et le pouvoir de l'amour. Chaque note de "Hedwig's Theme" rappelle que la magie est partout pour ceux qui savent où la chercher.
           </p>
@@ -69,6 +73,7 @@
         <div class="article5">
           <h2>Les Mage Derrière la Réalisation de Harry Potter</h2>
           <a href=""><img src="/public/img/Chaise.webp"></a>
+          <p class="rectangle5"></p>
           <p>
             Découvrez les Réalisateurs de Harry Potter : ceux qui ont porté avec talent la magie de Poudlard à l'écran. Chaque film de la série, célèbre pour capturer l'essence des personnages de J.K. Rowling, a été façonné par un réalisateur apportant sa vision artistique unique. Cet article explore leur contribution à cette épopée cinématographique qui maintient l'héritage magique de Harry Potter. Plongez dans cette aventure cinématographique pour explorer le talent derrière cette saga inoubliable, où la magie demeure et la quête de Harry, Ron et Hermione demeure éternelle.
           </p>
