--- a/fr/page1.html
+++ b/fr/page1.html
@@ -83,19 +83,19 @@
       </section>
     </main>
     <footer>
-      <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
-      <p>MENU</p>
-      <ul>
+      <a href="page1.html"><img class="logofooter" src="/public/img/Logo.webp" alt="Retour accueuil"></a>
+      <p class="menu">MENU</p>
+      <ul class="articleli">
         <li><a href="">La Saga Magique Qui a Enchanté le Monde</a></li>
           <li><a href="">Le Début Magique d'une Saga Épique</a></li>
           <li><a href="">La Conclusion Épique d'une Saga Magique</a></li>
           <li><a href="">La Mélodie Enchantée de la Saga Harry Potter</a></li>
           <li><a href="">Les Mage Derrière la Réalisation de Harry Potter</a></li>
       </ul>
-      <ul>
-        <li><a href="apropos.html"></a>A Propos</li>
-        <li><a href="glossaire.html"></a>Glossaire</li>
-        <li><a href="autreprojet"></a>Autres projets</li>
+      <ul class="utils">
+        <li><a href="apropos.html">A Propos</a></li>
+        <li><a href="glossaire.html">Glossaire</a></li>
+        <li><a href="autreprojet">Autres projets</a></li>
       </ul>
 
       <p class="suivre">NOUS SUIVRE</p>
