--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href=""><img src="/public/img/logo.webp"></a>
+        <a href="page1.html"><img src="/public/img/logo.webp.jpeg"></a>
         <p>A PROPOS</p><p>GLOSSAIRE</p>
       </header>
     <main>
