--- a/fr/page1.html
+++ b/fr/page1.html
@@ -10,7 +10,7 @@
   </head>
 <body>
     <header>
-      <a href=""><img src="/public/img/logo.webp"></a>
+      <a href=""><img src="/public/img/logo.webp.jpeg"></a>
       <p>A PROPOS</p><p>GLOSSAIRE</p>
     </header>
     <main>
@@ -83,7 +83,7 @@
       </section>
     </main>
     <footer>
-      <a href="page1.html"><img class="logofooter" src="/public/img/Logo.webp" alt="Retour accueuil"></a>
+      <a href="page1.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
       <p class="menu">MENU</p>
       <ul class="articleli">
         <li><a href="">La Saga Magique Qui a Enchanté le Monde</a></li>
