--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -47,8 +47,9 @@
             <div class="part1">
                 <img src="/public/img/HarryP1 banner.webp" alt="Affiche">
                 <h2>L'Appel de la Magie</h2>
-                <p>
+                <p style="white-space:pre-line";>
                     Depuis sa première publication en 1997, la saga Harry Potter a su conquérir le cœur de lecteurs de tous âges. Le monde magique créé par J.K. Rowling est devenu un phénomène culturel mondial, déclenchant une passion pour la magie, l'amitié, et l'aventure.
+                    
                     "La magie est partout si vous savez où regarder." - Albus Dumbledore
                 </p>
             </div>
@@ -64,8 +65,9 @@
             <div class="part4">
                 <h2>Au-Delà des Livres et des Films</h2>
                 <img src="/public/img/illucerf.webp" alt="illustration">
-                La magie de Harry Potter Va bien au delà des livres et des films.
+                <p>La magie de Harry Potter Va bien au delà des livres et des films.
                 Les parcs à thème, les jeux vidéo, les produits dérivés et la communauté des fans vibrant son autant de témoignages de son impact. Les fans du monde entier se réunissent pour célébrer cette saga qui continue d'émerveiller, d'inspirer et de rassembler.
+            </p>
             </div>
             <div class="part5">
                 <h2>Rejoignez-nous dans cette Aventure Magique</h2>
