--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARTICLE 2</title>
-</head>
+<html lang="fr" x-data="{
+  menuIsOpen: false,
+ }" 
+ :class="{noscroll:menuIsOpen,}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/css/style3.css" />
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <title>Dobby est libre</title>
+  </head>
 <body>
     <header>
-        <a href=""><img src="/public/img/logo.webp"></a>
-        <p>A PROPOS</p><p>GLOSSAIRE</p>
+      <a href=""><img src="/public/img/logo.webp.jpeg"></a>
+      <p class="apropos">A PROPOS</p><p class="glossaire">GLOSSAIRE</p>
+
+      <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
+        <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
+        </a>
+        <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
+          <div class="close-icon" @click="menuIsOpen = false">
+            <img src="/public/img/menu-closed.webp" alt="Fermer le menu" /></div>
+            <ul>
+              <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+              <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+              <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+              <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+              <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
+            </ul>
+        </nav>
       </header>
     <main>
-        <div>
-            <img src="/public/img/Head.webp" alt="accueuil">
-            <p>FR / ENG</p>
-            <h1>Dobby est libre</h1>
-        </div>
-        <section>
-            <h1>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h1>
-            <p>Plongez dans le mystère et la magie : Le premier pas épique de Harry Potter à l'École des Sorciers</p>
+        <section class="landing">
+            <img class="head" src="/public/img/Head.webp" alt="accueuil">
             <div>
+              <p>FR / ENG</p>
+              <h1>Dobby est libre</h1>
+            </div>
+        </section>
+        <section class="article">
+            <h1>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h1>
+            <p class="chapeau">Plongez dans le mystère et la magie : Le premier pas épique de Harry Potter à l'École des Sorciers</p>
+            <div class="part1">
                 <img src="/public/img/Banner.webp" alt="Affiche">
                 <p>
                     Le monde de la littérature a été ensorcelé par l'arrivée du jeune sorcier qui allait changer à jamais notre perception de la magie. "Harry Potter à l'École des Sorciers" est le premier chapitre de l'incroyable voyage de Harry Potter, écrit par la talentueuse J.K. Rowling. Dans cet article, nous plongeons dans le livre qui a tout déclenché,
                     l'histoire qui a captivé des millions de lecteurs à travers le monde.
                 </p>
             </div>
-            <div>
+            <div class="part2">
                 <h2>Le Commencement d'une Aventure Magique</h2>
                 <p>
                     Le livre s'ouvre sur une introduction mystérieuse qui nous présente la famille Dursley et une étrange nouvelle qui secoue le monde.
@@ -34,14 +58,14 @@
                     <img src="/public/img/dorslay.webp" alt="dorslay">
                 </p>
             </div>
-            <div>
+            <div class="part3">
                 <h2>La Lettre Qui Change Tout</h2>
                 <p>
                     Harry Potter, le jeune orphelin, reçoit bientôt une lettre étonnante, l'invitant à rejoindre Poudlard, l'école de sorcellerie. Ce simple parchemin déclenche une série d'événements extraordinaires,
                     et Harry se lance dans une aventure au-delà de son imagination.
                 </p>
             </div>
-            <div>
+            <div class="part4">
                 <h2>L'École de Poudlard</h2>
                 <a href=""><img src="/public/img/poudlard.webp" alt="poudlard"></a>
                 <p>
@@ -49,21 +73,21 @@
                     et ensemble, ils découvrent les merveilles et les dangers de l'école.
                 </p>
             </div>
-            <div>
-                <h1>La Chasse au Sorcier Maléfique</h1>
+            <div class="part5">
+                <h2>La Chasse au Sorcier Maléfique</h2>
                 <p>
                     Le livre dévoile progressivement l'existence de Lord Voldemort, le sorcier maléfique responsable de la mort des parents d'Harry.
                     La quête pour découvrir la vérité sur Voldemort et ses intentions sombres devient le fil conducteur de la série.
                 </p>
                 <img src="/public/img/vold more.webp" alt="Voldemort">
             </div>
-            <div>
-                <h1>Un Classique de la Littérature Fantastique</h1>
+            <div class="part6">
+                <h2>Un Classique de la Littérature Fantastique</h2>
                 <p>
                     Harry Potter à l'École des Sorciers" est bien plus qu'un simple livre pour enfants. C'est une œuvre qui traverse les générations, rappelant à chacun l'importance de l'amitié, du courage,
                     et de la persévérance. La magie de J.K. Rowling a donné naissance à une saga épique qui continue à captiver des lecteurs du monde entier.
                 </p>
-                <p>
+                <p class="p2">
                     Que vous soyez un fan de longue date ou que vous découvriez Harry Potter pour la première fois, ce livre est le point de départ d'une aventure incroyable qui vous emmènera dans un monde où la magie est réelle,
                     les amis sont précieux, et l'amour triomphe du mal.
                 </p>
@@ -84,7 +108,7 @@
             </section>
             <section class="autre_article">
                 <h1>Autres articles</h1>
-            <div>
+            <div class="aa1">
                 <h2>Harry Potter : La Saga Magique Qui a Enchanté le Monde.</h2>
                 <img src="/public/img/HarryP1 banner.webp" alt="Lien article 2">
                 <p>
@@ -93,7 +117,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa2">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
                 <img src="/public/img/Harry_gare.webp" alt="Lien article 3">
                 <p>
@@ -102,7 +126,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa3">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
                 <img src="/public/img/Hedwige.webp" alt="Lien article 4">
                 <p>
@@ -111,7 +135,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa4">
                 <h2>les Mages Derrière l'Écran</h2>
                 <img src="/public/img/Chaise.webp" alt="Lien article 5">
                 <p>
@@ -123,19 +147,19 @@
         </section>
     </main>
     <footer>
-        <a href="page1.html"><img src="/public/img/Logo.webp" alt="Retour accueuil"></a>
-        <p>MENU</p>
-        <ul>
-            <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
-          <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
-          <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
-          <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
-          <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
+        <a href="page1.html"><img class="logofooter" src="/public/img/logo.webp.jpeg" alt="Retour accueuil"></a>
+        <p class="menu">MENU</p>
+        <ul class="articleli">
+          <li><a href="Page2.html">La Saga Magique Qui a Enchanté le Monde</a></li>
+            <li><a href="Page3.html">Le Début Magique d'une Saga Épique</a></li>
+            <li><a href="Page4.html">La Conclusion Épique d'une Saga Magique</a></li>
+            <li><a href="Page5.html">La Mélodie Enchantée de la Saga Harry Potter</a></li>
+            <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
         </ul>
-        <ul>
-          <li><a href="apropos.html"></a>A Propos</li>
-          <li><a href="glossaire.html"></a>Glossaire</li>
-          <li><a href="autreprojet"></a>Autres projets</li>
+        <ul class="utils">
+          <li><a href="apropos.html">A Propos</a></li>
+          <li><a href="glossaire.html">Glossaire</a></li>
+          <li><a href="autreprojet">Autres projets</a></li>
         </ul>
   
         <p class="suivre">NOUS SUIVRE</p>
@@ -146,5 +170,5 @@
           <img class="img" src="public/img/youtube.webp" />
         </div>
       </footer>
-</body>
-</html>
+  </body>
+  </html>
